# magnet

./: README.md
benchmark/: run.sh
src/: CMakeLists.txt  buffer.c  common.c  common.h  defs.h  levels.h  magnet.c  models.c  models.h  msg.c  param.h  pmodels.c  reads.h
